examples/test/testpolicy9052.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9052
  namespace: namespace302
spec:
  podSelector:
    matchLabels:
      key34: value44
      key12: value17
      key41: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value6
      podSelector:
        matchLabels:
          key18: value21
          key4: value0
          key46: value4
